--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <p class="telefono">(223) 489-9898</p>
             <p class="correo">contacto@automarket.com</p>
           </div>
-          <div class="col-md-4 logo">
-            <img src="img/logo.png" alt="Imagen logo" class="logo">
+          <div class="col-md-4  my-auto logo">
+            <h3>AUTOMARKET</h3>
           </div>
         </div>
       </div>
