--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row mt-3">
             <div class="col">
-             <h2 class="titulo-seccion" id="titulo-contacto">CONTACTO</h2>
+                <h2 class="titulo-seccion" id="titulo-contacto">CONTACTO</h2>
                 <form action="" id="formulario">
                     <div class="form-group row">
                         <div class="col-12 col-md-4 mb-3 formulario-grupo" id="grupo-nombre">
@@ -99,19 +99,22 @@
                             <textarea name="mensaje"
                                 placeholder="Contanos un poco más de lo que te interese saber y nos pondremos en contacto con vos..."
                                 id="mensaje" class="form-control formulario-input" rows="5"></textarea>
-                                <i class="formulario-validacion fas fa-times-circle"></i>
-                            <p class="formulario-input-error">Este campo es requerido.</p> 
+                            <i class="formulario-validacion fas fa-times-circle"></i>
+                            <p class="formulario-input-error">Este campo es requerido.</p>
                         </div>
                     </div>
 
                     <div class="formulario-mensaje text-center" id="formulario-mensaje">
-                        <p><i class="fas fa-exclamation-triangle"></i><b>Error: </b>Por favor rellene el formulario correctamente.</p>
+                        <p><i class="fas fa-exclamation-triangle"></i><b>Error: </b>Por favor rellene el formulario
+                            correctamente.</p>
                     </div>
-                    <div class="form-group row justify-content-center text-center formulario-grupo formulario_grupo_btn">
-                            <div class="col-12 col-sm-9 col-md-4">
-                                <button class="btn btn-warning btn-block btn-form" type="submit">ENVIAR</button>
-                                <p class="formulario-mensaje-exito" id="formulario-mensaje-exito">Formulado enviado exitosamente!</p>
-                            </div>
+                    <div
+                        class="form-group row justify-content-center text-center formulario-grupo formulario_grupo_btn">
+                        <div class="col-12 col-sm-9 col-md-4">
+                            <button class="btn btn-primary btn-block btn-form" type="submit">ENVIAR</button>
+                            <p class="formulario-mensaje-exito" id="formulario-mensaje-exito">Formulado enviado
+                                exitosamente!</p>
+                        </div>
                     </div>
                 </form>
             </div>
